-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.6.0
-
None
-
6b92cb8ec199159d629c013fbd4b4b7ab8ad60db
src/corelib/animation/qabstractanimation.cpp:164: error: expected initializer before '<' token
src/corelib/animation/qabstractanimation.cpp: In static member function 'static QUnifiedTimer* QUnifiedTimer::instance()':
src/corelib/animation/qabstractanimation.cpp:176: error: 'unifiedTimer' was not declared in this scope