Make the animation api compile when QT_NO_THREAD is defined

Task-number: QTBUG-6890
Reviewed-by: Thierry